--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ rel="stylesheet"
             <a href="#" class="menu-link">Новости</a>
           </li>
         </ul>
-        <a target='_blank' href="https://github.com/" class="logo">
+        <a target='_blank' href="https://github.com/hateq" class="logo">
           <img  class="logo-img" src="images/logo.svg" alt="logo">
         </a>
         <ul class="menu-list menu-right">
